crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__conformer_shuriken_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 194,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Equipped creature has \"Whenever ~ attacks, tap target creature defending player controls. If that creature has greater power than ~, put a number of +1/+1 counters on ~ equal to the difference.\""
      },
      "node": {
        "Static": {
          "definition": {
            "mode": "Continuous",
            "affected": {
              "type": "Typed",
              "type_filters": [
                "Creature"
              ],
              "controller": null,
              "properties": [
                {
                  "type": "EquippedBy"
                }
              ]
            },
            "modifications": [
              {
                "type": "GrantTrigger",
                "trigger": {
                  "mode": "Attacks",
                  "execute": {
                    "kind": "Spell",
                    "effect": {
                      "type": "SetTapState",
                      "target": {
                        "type": "Typed",
                        "type_filters": [
                          "Creature"
                        ],
                        "controller": "DefendingPlayer",
                        "properties": []
                      },
                      "scope": {
                        "type": "Single"
                      },
                      "state": {
                        "type": "Tap"
                      }
                    },
                    "declares_chosen_group": 0,
                    "cost": null,
                    "sub_ability": {
                      "kind": "Spell",
                      "effect": {
                        "type": "PutCounter",
                        "counter_type": "P1P1",
                        "count": {
                          "type": "Difference",
                          "left": {
                            "type": "Ref",
                            "qty": {
                              "type": "Power",
                              "scope": {
                                "type": "Target"
                              }
                            }
                          },
                          "right": {
                            "type": "Ref",
                            "qty": {
                              "type": "Power",
                              "scope": {
                                "type": "Source"
                              }
                            }
                          }
                        },
                        "target": {
                          "type": "SelfRef"
                        }
                      },
                      "reads_chosen_group": 0,
                      "cost": null,
                      "sub_ability": null,
                      "duration": null,
                      "description": null,
                      "target_prompt": null,
                      "condition": {
                        "type": "QuantityCheck",
                        "lhs": {
                          "type": "Ref",
                          "qty": {
                            "type": "Power",
                            "scope": {
                              "type": "Target"
                            }
                          }
                        },
                        "comparator": "GT",
                        "rhs": {
                          "type": "Ref",
                          "qty": {
                            "type": "Power",
                            "scope": {
                              "type": "Source"
                            }
                          }
                        }
                      },
                      "optional_targeting": false,
                      "optional": false,
                      "forward_result": false,
                      "sub_link": "SequentialSibling"
                    },
                    "duration": null,
                    "description": null,
                    "target_prompt": null,
                    "condition": null,
                    "optional_targeting": false,
                    "optional": false,
                    "forward_result": false
                  },
                  "valid_card": {
                    "type": "SelfRef"
                  },
                  "origin": null,
                  "destination": null,
                  "trigger_zones": [
                    "Battlefield"
                  ],
                  "phase": null,
                  "optional": false,
                  "damage_kind": "Any",
                  "secondary": false,
                  "valid_target": null,
                  "valid_source": null,
                  "description": "Whenever ~ attacks, tap target creature defending player controls. If that creature has greater power than ~, put a number of +1/+1 counters on ~ equal to the difference.",
                  "constraint": null,
                  "condition": null,
                  "batched": false
                }
              }
            ],
            "condition": null,
            "affected_zone": null,
            "effect_zone": null,
            "active_zones": [],
            "characteristic_defining": false,
            "description": "Equipped creature has \"Whenever ~ attacks, tap target creature defending player controls. If that creature has greater power than ~, put a number of +1/+1 counters on ~ equal to the difference.\""
          },
          "source_text": "Equipped creature has \"Whenever ~ attacks, tap target creature defending player controls. If that creature has greater power than ~, put a number of +1/+1 counters on ~ equal to the difference.\"",
          "body_ir": null
        }
      }
    },
    {
      "id": 1,
      "source": {
        "id": {
          "item": 1,
          "ordinal": 0
        },
        "span": {
          "first_line": 1,
          "last_line": 1,
          "start_byte": 195,
          "end_byte": 204,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Equip {2}"
      },
      "node": {
        "Spell": {
          "source_text": "Equip {2}",
          "body": {
            "clauses": [
              {
                "id": 0,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 1
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 0,
                    "end_byte": 9,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 0
                  },
                  "fragment": "Equip {2}"
                },
                "disposition": {
                  "Emit": {
                    "followup": null,
                    "intrinsic": null
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "Attach",
                    "target": {
                      "type": "Typed",
                      "type_filters": [
                        "Creature"
                      ],
                      "controller": "You",
                      "properties": []
                    },
                    "selection": {
                      "at_resolution": {}
                    }
                  },
                  "duration": null,
                  "sub_ability": null,
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": false,
                  "unless_pay": null
                },
                "boundary": null,
                "condition": null,
                "is_optional": false,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null
              }
            ],
            "kind": "Activated",
            "continuation_kind": null,
            "player_scope_rewrite": "Apply",
            "chain_rounding": null,
            "actor": null,
            "in_trigger": false,
            "repeat_until": null
          },
          "shell": {
            "sub_link": null,
            "cost": {
              "type": "Mana",
              "cost": {
                "type": "Cost",
                "shards": [],
                "generic": 2
              }
            },
            "activation_restrictions": [
              {
                "type": "AsSorcery"
              }
            ],
            "ability_tag": {
              "type": "Equip"
            },
            "description": "Equip {2}"
          },
          "die_results": [],
          "root_transforms": []
        }
      }
    }
  ],
  "source_text": "Equipped creature has \"Whenever this creature attacks, tap target creature defending player controls. If that creature has greater power than this creature, put a number of +1/+1 counters on this creature equal to the difference.\"\nEquip {2}",
  "card_name": "Conformer Shuriken"
}
