crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__conformer_shuriken_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Activated",
      "effect": {
        "type": "Attach",
        "target": {
          "type": "Typed",
          "type_filters": [
            "Creature"
          ],
          "controller": "You",
          "properties": []
        },
        "selection": {
          "at_resolution": {}
        }
      },
      "cost": {
        "type": "Mana",
        "cost": {
          "type": "Cost",
          "shards": [],
          "generic": 2
        }
      },
      "sub_ability": null,
      "duration": null,
      "description": "Equip {2}",
      "target_prompt": null,
      "activation_restrictions": [
        {
          "type": "AsSorcery"
        }
      ],
      "ability_tag": {
        "type": "Equip"
      },
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [
    {
      "mode": "Continuous",
      "affected": {
        "type": "Typed",
        "type_filters": [
          "Creature"
        ],
        "controller": null,
        "properties": [
          {
            "type": "EquippedBy"
          }
        ]
      },
      "modifications": [
        {
          "type": "GrantTrigger",
          "trigger": {
            "mode": "Attacks",
            "execute": {
              "kind": "Spell",
              "effect": {
                "type": "SetTapState",
                "target": {
                  "type": "Typed",
                  "type_filters": [
                    "Creature"
                  ],
                  "controller": "DefendingPlayer",
                  "properties": []
                },
                "scope": {
                  "type": "Single"
                },
                "state": {
                  "type": "Tap"
                }
              },
              "declares_chosen_group": 0,
              "cost": null,
              "sub_ability": {
                "kind": "Spell",
                "effect": {
                  "type": "PutCounter",
                  "counter_type": "P1P1",
                  "count": {
                    "type": "Difference",
                    "left": {
                      "type": "Ref",
                      "qty": {
                        "type": "Power",
                        "scope": {
                          "type": "Target"
                        }
                      }
                    },
                    "right": {
                      "type": "Ref",
                      "qty": {
                        "type": "Power",
                        "scope": {
                          "type": "Source"
                        }
                      }
                    }
                  },
                  "target": {
                    "type": "SelfRef"
                  }
                },
                "reads_chosen_group": 0,
                "cost": null,
                "sub_ability": null,
                "duration": null,
                "description": null,
                "target_prompt": null,
                "condition": {
                  "type": "QuantityCheck",
                  "lhs": {
                    "type": "Ref",
                    "qty": {
                      "type": "Power",
                      "scope": {
                        "type": "Target"
                      }
                    }
                  },
                  "comparator": "GT",
                  "rhs": {
                    "type": "Ref",
                    "qty": {
                      "type": "Power",
                      "scope": {
                        "type": "Source"
                      }
                    }
                  }
                },
                "optional_targeting": false,
                "optional": false,
                "forward_result": false,
                "sub_link": "SequentialSibling"
              },
              "duration": null,
              "description": null,
              "target_prompt": null,
              "condition": null,
              "optional_targeting": false,
              "optional": false,
              "forward_result": false
            },
            "valid_card": {
              "type": "SelfRef"
            },
            "origin": null,
            "destination": null,
            "trigger_zones": [
              "Battlefield"
            ],
            "phase": null,
            "optional": false,
            "damage_kind": "Any",
            "secondary": false,
            "valid_target": null,
            "valid_source": null,
            "description": "Whenever ~ attacks, tap target creature defending player controls. If that creature has greater power than ~, put a number of +1/+1 counters on ~ equal to the difference.",
            "constraint": null,
            "condition": null,
            "batched": false
          }
        }
      ],
      "condition": null,
      "affected_zone": null,
      "effect_zone": null,
      "active_zones": [],
      "characteristic_defining": false,
      "description": "Equipped creature has \"Whenever ~ attacks, tap target creature defending player controls. If that creature has greater power than ~, put a number of +1/+1 counters on ~ equal to the difference.\""
    }
  ],
  "replacements": [],
  "extractedKeywords": []
}
